# Dark_DATA_CEN

./: .claude-todos.json  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GITHUB_SETUP_INSTRUCTIONS.md  GITHUB_UPLOAD_CHECKLIST.md  LICENSE  Makefile  PROJECT_STATUS_REPORT.md  README.md  README_GITHUB.md  SETUP_REPOSITORY.md  cleanup_git.sh  docker-compose.yml  prepare_github.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai_platform/: README.md
ai_platform/analyzers/: document_structure_analyzer.py  specific_annex_detector.py
ai_platform/core/: claude_chunk_interface.py  iterative_learner.py
ai_platform/knowledge_graph/: knowledge_graph_builder.py
ai_platform/mcp_bridges/: claude_mcp_bridge_semantic.py
ai_platform/mcp_clients/: linux_mcp_client.py
ai_platform/mcp_servers/: core_server.py  cross_domain_server.py  enhanced_server.py  legal_server.py  mercados_server.py  operaciones_server.py  resource_discovery_server.py
ai_platform/processors/: enhanced_annex_processor.py
ai_platform/resources/: PLATFORM_STATUS.md  README.md  enhanced_tool_registry.json  integrated_api_endpoints.json  platform_resource_catalog.json  unified_document_index.json
config/: document_types.yaml  processing_config.yaml
config/schemas/: database_schema.sql
dark_data/analyzers/: pattern_analyzer.py  specific_annex_detector.py  structure_learning_agent.py
dark_data/cli/: main.py  simple_viewer.py
dark_data/core/: ai_training_pipeline.py  document_classifier.py  iterative_learner.py
dark_data/database/: database_viewer.py  integrate_chunks_to_db.py  view_processed_data.py
dark_data/extractors/: pdf_extractor_v2.py
dark_data/processors/: adaptive_document_processor.py  document_processor.py  enhanced_annex_processor.py  large_document_processor.py  truly_adaptive_processor.py
dark_data/web/: dashboard.py  web_viewer.py
data/: README.md
docs/: DATA_FLOW.md  DATA_FLOW_EXAMPLE.md  DATA_FLOW_FAQ.md  PLATFORM_HEALTH_REPORT.md  QUICK_START.md  UNIVERSAL_SCHEMA_GUIDE.md
docs/dev/: TODO_LIST.md
docs/development/: CLAUDE_SESSION_CONTINUITY.md  KNOWLEDGE_TRANSFER_SYSTEM.md  SESSION_TEMPLATES.md
docs/metodologia/: DATA_FLOW.md  DATA_FLOW_EXAMPLE.md  README.md
docs/user/: LARGE_DOCUMENT_GUIDE.md  PROJECT_STRUCTURE.md  SCRIPT_INVENTORY.md  TECHNICAL_DOCUMENTATION.md  claude_mcp_setup.md  document_processing_v2.md
domains/: README.md
infrastructure/: ideas
infrastructure/docker/: Dockerfile
platform_data/: __init__.py
platform_data/schemas/: ai_metadata_schema.json
profiles/anexos_eaf/: ANALYSIS_TOOLS_INVENTORY.md  CLAUDE_PROMPT_TEMPLATE.md  ENHANCED_METHODOLOGY.md  FOLDER_CONSOLIDATION.md  INTERACTIVE_PROCESS.md  QUICK_REFERENCE.md  README.md  STEP_BY_STEP_GUIDE.md  TOOL_REFERENCE.md  WORKFLOW.md  (+2 more)
prompts/: PROMPT_ESQUEMA_UNIVERSAL_CHILE_IA.md  PROMPT_REFERENCIAS_CRUZADAS.md  README.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: README.md  interactive_commands.sh  load_todos.py  search_all_content_types.py
templates/: dashboard.html
(+385 files in other folders)
